2007-05-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/tkplot.R (tkplot, i.tkplot.get.edge.lty) :
	the latter was added

	* interfaces/R/igraph/R/plot.common.R (i.get.edge.lty) : removed

	* interfaces/R/igraph/R/plot.R (plot.igraph) : some simplification, 
	we don't need to plot arrow heads separately if lty!=1 any more

	* interfaces/R/igraph/R/plot.R (plot.igraph) : edge width bug for 
	edges without an arrow corrected

2007-05-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : a loop plotting bug 
	corrected

	* interfaces/R/igraph/R/plot.R (plot.igraph) : plot better looking edges
	(igraph.Arrow) : added

	* interfaces/R/igraph/R/tkplot.R (tkplot) : mirror the y coordinate to
	have the sample plot as for plot.igraph

	* interfaces/R/igraph/R/plot.R
	* interfaces/R/igraph/R/plot.common.R
	* interfaces/R/igraph/R/tkplot.R : different parameters for 
	vertex and edge labels

	* interfaces/R/igraph/R/plot.R (plot.igraph) : uniform font handling
	* interfaces/R/igraph/plot.common.R (i.default.values) : font options added
	* interfaces/R/igraph/tkplot.R (tkplot) : uniform font handling
	(.tkplot.convert.font) : added

2007-04-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.air) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_air) : added

	* interfaces/R/igraph/R/revolver.R (evolver.ir) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_ir) : added

	* interfaces/R/igraph/R/revolver.R (evolver.il) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_il) : added

2007-04-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_progress_handler)
	(R_igraph_before2) : new progress handler
	(R_igraph_layout_kamada_kawai, R_igraph_layout_kamada_kawai_3d)
	(R_igraph_layout_fruchterman_reingold_grid)
	(R_igraph_layout_fruchterman_reingold)
	(R_igraph_layout_fruchterman_reingold_3d)