@@ -1,5 +1,8 @@
 2007-05-06  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/plot.R (igraph.Arrows) : code argument
+	reimplemented, now works properly even if lty!=1 & arrow.mode=3
+
 	* interfaces/R/igraph/R/tkplot.R (tkplot, i.tkplot.get.edge.lty) :
 	the latter was added
 
